# gnome-desktop-rs

./: .gitignore  GnomeDesktop-4.0.gir  README.md  flake.nix
gnome-desktop/: Cargo.toml  Gir.toml  docs.md
gnome-desktop/src/: lib.rs
gnome-desktop/src/auto/: desktop_thumbnail_factory.rs  enums.rs  functions.rs  idle_monitor.rs  mod.rs  pnp_ids.rs  versions.txt  wall_clock.rs  xkb_info.rs
gnome-desktop/sys/: Cargo.toml  build.rs
gnome-desktop/sys/src/: lib.rs
gnome-desktop/sys/tests/: abi.rs  constant.c  layout.c
