[package]
name = "gnome-desktop"
version = "0.4.0"
# authors = ["The Gtk-rs Project Developers"]
categories = ["api-bindings"]
description = "Rust bindings for the GNOME Utility Library "
edition = "2018"
keywords = ["gnome", "gtk"]
license = "MIT"
#repository = "https://gitlab.gnome.org/World/Rust/gnome-desktop-rs"
repository = "https://gitlab.gnome.org/vlinkz/gnome-desktop-rs"

[dependencies]
libc = "0.2"
glib = "0.16"
gio = "0.16"
gdk-pixbuf = "0.16"
gdesktop_enums = { package = "gsettings-desktop-schemas", version = "0.3" }
ffi = { package = "gnome-desktop-sys", path = "./sys", version = "0.4" }

[features]
default = []
